Fix nav logo on mobile and edit some mobile styling

--- a/css/style.css
+++ b/css/style.css
@@ -60,13 +60,13 @@ body {
         letter-spacing: 1.4rem; } }
     @media only screen and (max-width: 37.5em) {
       .heading-primary--main {
-        font-size: 2.5rem;
+        font-size: 3rem;
         letter-spacing: .8rem;
         margin: 0 3rem 2rem; } }
     @media only screen and (max-width: 25em) {
       .heading-primary--main {
-        font-size: 2.3rem;
-        letter-spacing: .5rem;
+        font-size: 3rem;
+        letter-spacing: .4rem;
         margin: 0 1rem 1rem; } }
   .heading-primary--sub {
     animation: moveInRight 1s ease-out;
@@ -442,11 +442,11 @@ body {
       max-width: 400px; } }
   @media only screen and (max-width: 25em) {
     #flex-container {
-      min-width: 280px;
-      max-width: 320px; } }
+      min-width: 260px;
+      max-width: 300px; } }
 
 #left-zone {
-  background-color: var(--color-white-1);
+  background-color: var(--color-white-2);
   height: 100%;
   -webkit-box-flex: 0;
   -ms-flex: 0 0 auto;
@@ -456,6 +456,21 @@ body {
   display: flex;
   margin: 2rem 0;
   width: 100%; }
+  #left-zone h2 {
+    display: none; }
+    @media only screen and (max-width: 37.5em) {
+      #left-zone h2 {
+        color: var(--color-secondary);
+        display: initial;
+        font-family: var(--font-jo);
+        font-size: 3.5rem;
+        font-weight: 400;
+        left: 50%;
+        position: relative;
+        top: 60%;
+        text-align: center;
+        transform: translate(-50%, -50%);
+        width: 80%; } }
 
 #left-zone .list {
   display: -webkit-box;
@@ -616,10 +631,23 @@ body {
   font-size: 1.5rem; }
 
 #right-zone {
+  background-color: var(--color-grey-dark-3);
   width: 100%;
   -webkit-box-flex: 1;
   -ms-flex: 1 0 auto;
-  flex: 1 0 auto; }
+  flex: 1 0 auto;
+  z-index: -2; }
+  #right-zone h1 {
+    color: #fff;
+    font-family: var(--font-jo);
+    font-size: 4rem;
+    font-weight: 100;
+    left: 50%;
+    position: relative;
+    top: 80%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    width: 80%; }
 
 input:checked ~ .content-test {
   -webkit-transform: translateY(0%);
@@ -682,9 +710,10 @@ input:checked ~ .content-test {
   background-repeat: no-repeat;
   margin: 0 0 3rem; }
 
-.content-test-horiz-sub .picto {
-  height: 100px;
-  width: 100px; }
+@media only screen and (max-width: 37.5em) {
+  .content-test-horiz-sub .picto {
+    height: 100px;
+    width: 100px; } }
 
 @media only screen and (max-width: 37.5em) {
   .picto-sub {
@@ -722,7 +751,7 @@ input:checked ~ .content-test {
   .content_testimonial-6 .picto {
     background-image: url("/img/breakfast.jpg"); }
   .content_testimonial-6 .picto-sub {
-    background-image: url("/img/sing.jpg"); }
+    background-image: url("/img/dan.jpg"); }
 
 .content_testimonial-7 {
   background-color: #c06c84; }
@@ -962,10 +991,10 @@ label:first-letter {
         top: 160%; } }
     @media only screen and (max-width: 37.5em) {
       .header__social-icons {
-        top: 170%; } }
+        top: 150%; } }
     @media only screen and (max-width: 25em) {
       .header__social-icons {
-        top: 160%; } }
+        top: 140%; } }
     .header__social-icons li {
       list-style: none; }
       .header__social-icons li a {
@@ -1143,10 +1172,14 @@ label:first-letter {
   @media only screen and (max-width: 37.5em) {
     .navigation__button {
       height: 5rem;
+      right: 4.5rem;
+      top: 4.5rem;
       width: 5rem; } }
   @media only screen and (max-width: 25em) {
     .navigation__button {
       height: 4.2rem;
+      right: 3rem;
+      top: 3rem;
       width: 4.2rem; } }
 
 .navigation__background {
@@ -1163,11 +1196,13 @@ label:first-letter {
     .navigation__background {
       height: 5rem;
       width: 5rem;
-      right: 6rem;
-      top: 6rem; } }
+      right: 4.5rem;
+      top: 4.5rem; } }
   @media only screen and (max-width: 25em) {
     .navigation__background {
       height: 4.2rem;
+      right: 3rem;
+      top: 3rem;
       width: 4.2rem; } }
 
 .navigation__nav {
