--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -20,14 +20,14 @@
     }
 
     @media only screen and (max-width: $bp-small) {
-      font-size: 2.5rem;
+      font-size: 3rem;
       letter-spacing: .8rem;
       margin: 0 3rem 2rem;
     }
 
     @media only screen and (max-width: $bp-smallest) {
-      font-size: 2.3rem;
-      letter-spacing: .5rem;
+      font-size: 3rem;
+      letter-spacing: .4rem;
        margin: 0 1rem 1rem;
     }
   }
