--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -91,11 +91,11 @@
     }
 
     @media only screen and (max-width: $bp-small) {
-      top: 170%;
+      top: 150%;
     }
 
     @media only screen and (max-width: $bp-smallest) {
-      top: 160%;
+      top: 140%;
     }
 
     li {
